--- a/app/src/main/res/layout/activity_display_message.xml
+++ b/app/src/main/res/layout/activity_display_message.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.autodoc.appteste.DisplayMessageActivity">
+    tools:context="com.example.autodoc.appteste.MessageActivity">
 
     <TextView
         android:id="@+id/textMensagem"
