--- a/app/src/main/res/layout/activity_display_message.xml
+++ b/app/src/main/res/layout/activity_display_message.xml
@@ -4,20 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.autodoc.appteste.MessageActivity">
+    tools:context="com.example.autodoc.appteste.presentation.message.MessageActivity">
 
     <TextView
-        android:id="@+id/textMensagem"
-        android:textColor="@android:color/black"
+        android:id="@+id/text_mensagem"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
-        android:padding="15dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        tools:ignore="MissingConstraints"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="75dp"
-        app:layout_constraintHorizontal_bias="1.0" />
+        android:padding="15dp"
+        android:textColor="@android:color/black"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 </android.support.constraint.ConstraintLayout>
