--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.autodoc.appteste.HomeActivity">
+    tools:context="com.example.autodoc.appteste.presentation.home.HomeActivity">
 
     <EditText
-        android:id="@+id/editMensagem"
+        android:id="@+id/text_mensagem"
         android:layout_width="0dp"
         android:layout_height="46dp"
         android:layout_marginLeft="16dp"
@@ -16,30 +16,44 @@
         android:ems="10"
         android:hint="Digite a mensagem"
         android:inputType="textPersonName"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/button_enviar"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="HardcodedText"
-        app:layout_constraintRight_toLeftOf="@+id/btnEnviar"
-        app:layout_constraintHorizontal_bias="0.5" />
+        tools:ignore="HardcodedText" />
 
 
     <Button
-        android:id="@+id/btnEnviar"
+        android:id="@+id/button_enviar"
         android:layout_width="wrap_content"
         android:layout_height="49dp"
         android:layout_marginBottom="8dp"
-
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:text="@string/Enviar"
-        app:layout_constraintBottom_toBottomOf="@+id/editMensagem"
+        app:layout_constraintBottom_toBottomOf="@+id/text_mensagem"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toRightOf="@+id/editMensagem"
+        app:layout_constraintLeft_toRightOf="@+id/text_mensagem"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/editMensagem"
+        app:layout_constraintTop_toTopOf="@+id/text_mensagem"
         app:layout_constraintVertical_bias="0.0"
         tools:ignore="RtlHardcoded" />
+
+    <ProgressBar
+        android:id="@+id/progress_message"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_mensagem" />
 
 </android.support.constraint.ConstraintLayout>
