--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,10 +52,10 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewMessage"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="447dp"
-        android:layout_marginBottom="0dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
